compiler/testData/diagnostics/tests/generics/tpAsReified/InType.kt
class C<reified T>

fun <A> main(<!UNUSED_PARAMETER!>p1<!>: C<A>, <!UNUSED_PARAMETER!>p2<!>: C<Int>) {
}